...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarge_margin"
            android:text="@string/label_email" />

        <co.omise.android.ui.OmiseEditText
            android:id="@+id/edit_email"
            style="?android:attr/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:nextFocusForward="@id/button_submit" />

        <Button
            android:id="@+id/button_submit"
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
