<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="button_submit" type="id" />
    <item name="edit_card_name" type="id" />
    <item name="edit_card_number" type="id" />
    <item name="edit_expiry_date" type="id" />
    <item name="edit_security_code" type="id" />
    <item name="edit_country" type="id" />
    <item name="edit_street1" type="id" />
    <item name="edit_city" type="id" />
    <item name="edit_state" type="id" />
    <item name="edit_postal_code" type="id" />
    <item name="text_country_error" type="id" />
    <item name="text_street1_error" type="id" />
    <item name="text_city_error" type="id" />
    <item name="text_state_error" type="id" />
    <item name="text_postal_code_error" type="id" />
    <item name="image_card_brand" type="id" />
    <item name="spinner_expiry_month" type="id" />
    <item name="spinner_expiry_year" type="id" />
    <item name="text_card_name" type="id" />
    <item name="text_card_number" type="id" />
    <item name="text_expiry_date" type="id" />
    <item name="text_security_code" type="id" />
    <item name="layout_credit_card_form" type="id" />
    <item name="text_card_number_error" type="id" />
    <item name="text_card_name_error" type="id" />
    <item name="text_expiry_date_error" type="id" />
    <item name="text_security_code_error" type="id" />
    <item name="button_security_code_tooltip" type="id" />
</resources>